# msgapp

./: .gitignore
backend/: Cargo.toml  Dockerfile  database.db  database.db-shm  database.db-wal  package-lock.json  questions.json  tailwind.config.js  test.html
backend/.sqlx/: query-aaafe12069d0dac38691772ca3853d81a13da643a58d1f580f8e4080a8ae2b82.json
backend/css/: output.css
backend/migrations/: 20240301002426_schemav2.sql  20240305234641_schemav3.sql  20240306122102_schemav4.sql
backend/packbuilder/diamond_sets/: section.toml
backend/packbuilder/diamond_sets/47yt_legacy/: 256x 47-YT (Legacy).txt
backend/packbuilder/diamond_sets/sapphire/: ZXQ5 x Sapphire.txt
backend/packbuilder/diamond_sets/slayer/: ZXQ5 x Slayer.txt
backend/packs/metallic/: ZXQ5 x Metallic.txt
backend/src/: auth.rs  main.rs
backend/src/routes/: accounts.rs  assets.rs  contract.rs  messenger.rs  mod.rs  packs.rs  revision_presentation.rs
backend/templates/: 404.html.tera  home.html.tera  index.html.tera  login.html.tera  message.html.tera  question.html.tera  signup.html.tera  tailwind.css
backend/templates/auth/: login.html.tera
backend/templates/messenger/: home.html.tera  message.html.tera
backend/templates/other/: 404.html.tera  500.html.tera
backend/templates/packbuilder/: main.html.tera  option.html.tera
backend/templates/packs/: home.html.tera  pack.html.tera
