[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
reqwest = "0.11.22"
rocket = { version = "0.5.0", features = ["json", "tls"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.1.0", features = ["sqlx_macros", "sqlx_sqlite"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = "0.7.3"
dotenv = "0.15.0"
tokio-tungstenite = "0.20.1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
argon2 = "0.5.2"
rsa = { version = "0.9.6", features = ["pkcs5"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
tracing = "0.1.40"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
sha2 = "0.10.8"
